[package]
name = "dynamic_scaling_mechanism"
version = "0.0.1"

build = "build.rs"

[dependencies]
timely = "0.5.0"
timely_communication = "0.5.0"
abomonation = "^0.5"
abomonation_derive = "^0.3"
rand = "^0.3.18"
fnv="1.0"
redis = "0.8"

# [profile.release]
# opt-level = 3
# debug = true
# rpath = false
# lto = false
# codegen-units = 16
# debug-assertions = false
