[package]
name = "dynamic_scaling_mechanism"
version = "0.0.1"

build = "build.rs"

[dependencies]
timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git" }
abomonation = "^0.5"
abomonation_derive = "^0.3"
rand = "^0.4"
fnv="1.0"
zipf = "2.0"

# [profile.release]
# opt-level = 3
# debug = true
# rpath = false
# lto = false
# codegen-units = 16
# debug-assertions = false
