[package]
name = "dynamic_scaling_mechanism"
version = "0.0.1"

[features]
default = ["bin-8"]

bin-1 = []
bin-2 = []
bin-3 = []
bin-4 = []
bin-5 = []
bin-6 = []
bin-7 = []
bin-8 = []
bin-9 = []
bin-10 = []
bin-11 = []
bin-12 = []
bin-13 = []
bin-14 = []
bin-15 = []
bin-16 = []
bin-17 = []
bin-18 = []
bin-19 = []
bin-20 = []

fake_stateful = []

[dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow.git" }
#timely = { git = "https://github.com/antiguru/timely-dataflow.git", branch = "session_cease"}
#timely = "0.8"
#abomonation = { git = "https://github.com/frankmcsherry/abomonation.git" }
abomonation = "^0.7"
abomonation_derive = "^0.3"
rand = "^0.5"
fnv="1.0"
zipf = "^4.0"

[profile.release]
# opt-level = 3
debug = true
# rpath = false
# lto = false
# codegen-units = 16
# debug-assertions = false
panic = "abort"
