[package]
name = "nexmark"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[features]
default = ["dynamic_scaling_mechanism/bin-8"]
fake_stateful = ["dynamic_scaling_mechanism/fake_stateful"]

[dependencies]
#differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow.git" }
#timely = { git = "https://github.com/frankmcsherry/timely-dataflow.git"}
timely = "0.7"
#abomonation = { git = "https://github.com/frankmcsherry/abomonation.git" }
abomonation = "^0.7"
abomonation_derive = "0.3"
serde = "*"
serde_json = "*"
serde_derive = "*"
rand = "*"
fnv="1.0"
streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
dynamic_scaling_mechanism = { version = "0.0.1", path = "..", default_features = false }

#[patch.crates-io]
#timely = { git = 'https://github.com/frankmcsherry/timely-dataflow.git' }

[profile.release]
# opt-level = 3
debug = true
# rpath = false
# lto = false
# codegen-units = 16
# debug-assertions = false
#panic = "abort"
